--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div id="root"></div>
     <a
       class="github-fork-ribbon left-top"
-      href=""
+      href="https://github.com/ahfarmer/calculator"
       title="This is form Ziya KK">
       This is form Ziya KK
     </a>
